add swagger and mongodb bson dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jdbc.show-sql=true
 app.datasource.psql.url=jdbc:postgresql://localhost:5432/mydatabase
 app.datasource.psql.username=myuser
 app.datasource.psql.password=secret
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
